kubernetes/manifest-files/daemonset-test.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata: 
  name: daemonset-log
  labels: 
    app: log-agent
spec: 
  selector: 
    matchLabels: 
      app: log-agent
  template: 
    metadata: 
      labels: 
        app: log-agent
    spec: 
      containers: 
      - image: fluent/fluentd:latest
        name: fluend-cont
