kubernetes/manifest-files/init-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: init-container-dp
  namespace: default
  labels: 
    web: frontend
spec: 
  replicas: 5
  selector: 
    matchLabels: 
      web: db
  template: 
    metadata: 
      labels: 
        web: db
    spec: 
      containers: 
      - image: nginx
        name: nginx-cont
        command: ['sh', '-c', 'echo The app is running && sleep 3600']
