kubernetes/manifest-files/multi-containerPod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-redis-container
spec:
  containers:
  - image: nginx
    name: nginx-pod1
  - image: redis
    name: redis-pod2
  restartPolicy: Always
