kubernetes/manifest-files/portinfoPod.yaml
apiVersion: v1 
kind: Pod 
metadata:
  name: port-info-pod
  namespace: default
  labels:
    frontend: web-app
spec:
  containers: 
  - name: nginx-container
    image: nginx
    command: ["/bin/bash"]
    args: ["-c", "echo 'Nginx is running' && sleep 3600"]
    ports: 
    - containerPort: 8080
