kubernetes/manifest-files/test-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: httpd-pod

spec:
  containers:
  - name: apache-container
    image: httpd:latest
