kubernetes/manifest-files/nodeport-service.yaml
apiVersion: v1 
kind: Service
metadata: 
  name: nodeport-service
spec: 
  type: NodePort
  selector: 
    web: backend
  ports: 
  - port: 8080 # kubernetes service run port. it will be mentioned with the service ip
    targetPort: 80 # Container run port. in container httpd is running. httpd runs in 80 port
    nodePort: 30021
