kubernetes/manifest-files/test-ep.yaml
apiVersion: v1 
kind: Endpoints
metadata: 
  name: service-test
subsets: 
- addresses: 
  - ip: 10.21.2.137
  ports: 
  - port: 80
