kubernetes/manifest-files/test-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: service-test
spec: 
  ports: 
  - port: 80 # service Port
    targetPort: 8080 # pod container port
