kubernetes/manifest-files/web-backend-service.yaml
apiVersion: v1 
kind: Service
metadata: 
  name: backend-service
spec: 
  selector: 
    web: backend
  ports: 
  - port: 8080 # httpd Port
    targetPort: 80 # httpd-container run port in the pod
