kubernetes/manifest-files/Practice_k8s_Manifest.yml
apiVersion: v1
kind: Pod
metadata:
  name: example-pod
  namespace: example-namespace
  labels:
    app: example-app
spec:
  containers:
  - image: nginx:latest
    name: nginx-container
  - image: redis:latest
    name: redis-container


---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-redis-container
spec:
  containers:
  - image: nginx
    name: nginx-pod1
  - image: redis
    name: redis-pod2
  restartPolicy: Always


---
apiVersion: v1 
kind: Pod
metadata:
  name: cmd-args-pod
  namespace: csl-namespace
spec: 
  containers:
  - name: cont-name-cmd-args
    image: ubuntu
    command: ["/bin/bash"]
    args: ["-c", "echo Hello behen ke lawde && sleep 360"]

---
# Alternative 
apiVersion: v1 
kind: Pod 
metadata:
  name: cmd-args-pod-alt
  namespace: default
  labels:
    app: SMSnotification-app
spec:
  containers:
  - name: cmd-args-container
    image: ubuntu
    command: ["/bin/bash"]
    args:
    - "-c"
    - "df -hT > /tmp/df-output.txt"
  restartPolicy: Always

---
# With Port information
apiVersion: v1 
kind: Pod 
metadata:
  name: port-info-pod
  namespace: default
  labels:
    frontend: web-app
spec:
  containers: 
  - name: nginx-container
    image: nginx
    command: ["/bin/bash"]
    args: ["-c", "echo 'Nginx is running' && sleep 3600"]
    ports: 
    - containerPort: 8080
    
---
# Deployment with Port information
apiVersion: v1 
kind: Deployment 
metadata:
  name: port-info-deployment
  namespace: default
  labels:
    frontend: web-app
spec:
  replicas: 4
  selector: 
    matchlevel: 
      frontend: web-app
  spec:
    containers: 
    - name: nginx-container
      image: nginx
      command: ["/bin/bash"]
      args: ["-c", "echo 'Nginx is running' && sleep 3600"]
      ports: 
      - containerPort: 8080
    
---
# Deployment file
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-deploy
  labels: 
    app: backend
spec: 
  replicas: 7
  selector: 
    matchLabels: 
      app: backend
  template: 
    metadata: 
      labels: 
        app: backend
    spec: 
      containers: 
      - image: nginx:latest
        name: nginx-cont
        command: ["/bin/sh"]
        args: 
        - -c 
        - |
          printf "Hello we are here in pods \nCheck the nginx version\n" > /tmp/output.txt 
          nginx --version &>> /tmp/output.txt 
          sleep 3600

---
# Multi container Deployment
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: ng-red-deploy
  labels: 
    backend: redis-nginx
spec: 
  replicas: 5
  selector: 
    matchLabels: 
      backend: redis-nginx
  template: 
    metadata: 
      labels: 
        backend: redis-nginx 
    spec: 
      containers: 
      - image: nginx:latest
        name: nginx-cont
        command: ["/bin/sh"]
        args: 
        - -c 
        - |
          printf "Hello we are here in pods \nCheck the nginx version" > /tmp/output.txt 
          nginx --version >> /tmp/output.txt 
          sleep 3600
      - image: redis
        name: redis-container
        ports:
        - containerPort: 6379
        command: ["/bin/sh"]
        args: 
        - -c 
        - |
          apt update -y 
          printf "Hello we are here in pods \nCheck the redis version" > /tmp/output.txt
          redis-server --version >> /tmp/output.txt 
          sleep 3600
          
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: resource-test
  namespace: default
  labels: 
    app: backend
spec: 
  replicas: 4 
  selector: 
    matchLabels: 
      app: backend
  template: 
    metadata: 
      labels: 
        app: backend
    spec: 
      containers: 
      - image: httpd:latest
        name: apache-cont
        command: ["/bin/sh"]
        args: 
        - -c 
        - |
          apache2 -v >> /tmp/output.txt 
          printf "\nAbove is apache version" >> /tmp/output.txt
          df -hT >> /tmp/output.txt
          sleep 3600
        resources:
          requests: 
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "1"
            
---
# nodeSelector 

apiVersion: v1 
kind: Pod 
metadata: 
  name: nodeselector-pod
  labels: 
    app: db
spec: 
  nodeSelector: 
    app: frontend
  containers: 
  - image: httpd:latest
    name: apache-cont
    command: ["/bin/sh"]
    args: 
    - -c 
    - |
      httpd=$(httpd -v)
      printf "Apache version: $httpd-v \n\n" >> /tmp/output.txt
      df -hT >> /tmp/output.txt
      sleep 3600
    resources: 
      requests: 
        memory: "128Mi"
        cpu: "100m"
      limits: 
        memory: "1Gi"
        cpu: "1"
        
---
# nodeSelector
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: ns-deploy
  labels: 
    app: backend
spec: 
  replicas: 5 
  selector: 
    matchLabels: 
      web: backend
  template: 
    metadata: 
      labels: 
        web: backend
    spec: 
      nodeSelector: 
        app: db
      containers: 
      - image: httpd:latest
        name: apache-cont
        command: ["/bin/sh"]
        args: 
        - -c 
        - |
          httpd=$(httpd -v)
          printf "Apache version: $httpd-v \n\n" >> /tmp/output.txt
          df -hT >> /tmp/output.txt
          sleep 3600
        resources: 
          requests: 
            memory: "128Mi"
            cpu: "100m"
          limits: 
            memory: "1Gi"
            cpu: "1"
            

---
# Daemonset

apiVersion: apps/v1
kind: DaemonSet
metadata: 
  name: daemonset-deploy
  labels: 
    log: collector
spec:
  selector: 
    matchLabels: 
      log: collector
  template: 
    metadata: 
      labels: 
        log: collector
    spec: 
      containers: 
      - image: alpine:3.18
        name: alpine-cont
        command: ["/bin/sh"]
        args: 
        - -c 
        - | 
          cat /etc/alpine-release >> /tmp/output.txt
          sleep 3600
        resources: 
          requests: 
            memory: "512Mi"
            cpu: "0.1"
          limits: 
            memory: "1024Mi"
            cpu: "1"

---
apiVersion: apps/v1
kind: DaemonSet
metadata: 
  name: daemonset-log
  labels: 
    app: log-agent
spec: 
  selector: 
    matchLabels: 
      app: log-agent
  template: 
    metadata: 
      labels: 
        app: log-agent
    spec: 
      containers: 
      - image: fluent/fluentd:latest
        name: fluend-cont
        command: ["bin/sh"]
        args: 
        - -c
        - | 
          apt update -y 
          sleep 3600
          
---
# Node Affinity
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: na-required
  namespace: default
  labels: 
    web: frontend
spec: 
  replicas: 5
  selector: 
    matchLabels: 
      web: backend
  template: 
    metadata: 
      labels: 
        web: backend
    spec:
      affinity:     
       nodeAffinity:        
         requiredDuringSchedulingIgnoredDuringExecution:
           nodeSelectorTerms: 
           - matchExpressions:
             - key: web
               operator: In 
               values: 
               - backend
      containers: 
      - image: nginx:latest
        name: nginx-cont
        resources: 
          requests: 
            memory: "128Mi"
            cpu: "100m"
          limits: 
            memory: "512Mi"
            cpu: "500m"

---
# Node Affinity - Required
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: na-required
  namespace: default
  labels: 
    web: frontend
spec: 
  replicas: 5
  selector: 
    matchLabels: 
      web: backend
  template: 
    metadata: 
      labels: 
        web: backend
    spec:
      affinity:     
       nodeAffinity:        
         requiredDuringSchedulingIgnoredDuringExecution:
           nodeSelectorTerms: 
           - matchExpressions:
             - key: app
               operator: In 
               values: 
               - backend
      containers: 
      - image: nginx:latest
        name: nginx-cont
        resources: 
          requests: 
            memory: "128Mi"
            cpu: "100m"
          limits: 
            memory: "512Mi"
            cpu: "500m"

---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: node-aff-required
  namespace: default
  labels: 
    web: frontend
spec: 
  replicas: 3 
  selector: 
    matchLabels: 
      web: frontend
  template: 
    metadata: 
      labels: 
        web: frontend
    spec: 
      affinity: 
        nodeAffinity: 
          requiredDuringSchedulingIgnoredDuringExecution: 
            nodeSelectorTerms: 
            - matchExpressions: 
              - key: web
                operator: Exists
          - matchFields: 
          
      containers:
      - image: nginx:latest
        name: nginx-cont

---
# Node-Affinity preferred
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: node-aff-preferred
  namespace: default
  labels: 
    web: frontend
spec: 
  replicas: 3 
  selector: 
    matchLabels: 
      web: frontend
  template: 
    metadata: 
      labels: 
        web: frontend
    spec:
      affinity: 
        nodeAffinity: 
          preferredDuringSchedulingIgnoredDuringExecution: 
          - weight: 80
            preference: 
              matchExpressions: 
              - key: web
                operator: In 
                values: 
                - frontend
          - weight: 30
            preference: 
              matchExpressions: 
              - key: web
                operator: Exists 
                
      containers: 
      - image: nginx:latest
        name: nginx-cont
        resources: 
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"

---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: 
  namespace: 
  labels: 
    web: db
spec: 
  replicas: 18
  selector: 
    matchLabels: 
      web: db
  template: 
    metadata: 
      labels: 
        web: db
    spec: 
      affinity: 
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution: 
            nodeSelectorTerms: 
            - matchExpressions: 
              - key: 
                operator: 
                values: 
      affinity: 
       nodeAffinity:          
         preferredDuringScheduleIgnoredDuringExecution: 
         - weight: 70
           matchExpressions: 
           - key: 
             operator: 
             values: 
         - weight: 10
           key: 
           operator: 
           
      containers: 
      - image: 
        name: 

---
# Node Affinity - matchFields
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: matchfield-nodeaff
  namespace: default
  labels: 
    web: db
spec: 
  replicas: 7
  selector: 
    matchLabels: 
      web: db
  template: 
    metadata: 
      labels: 
        web: db
    spec: 
      affinity: 
        nodeAffinity: 
          requiredDuringSchedulingIgnoredDuringExecution: 
            nodeSelectorTerms: 
            - matchFields: 
              - key: metadata.name
                operator: In 
                values: 
                - k8sapp01-docker
      containers: 
      - image: nginx:latest
        name: nginx-cont
        resources: 
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
       
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: matchfield-nodeaff
  namespace: default
  labels: 
    web: db
spec: 
  replicas: 7
  selector: 
    matchLabels: 
      web: db
  template: 
    metadata: 
      labels: 
        web: db
    spec: 
      affinity: 
        nodeAffinity: 
          requiredDuringSchedulingIgnoredDuringExecution: 
            nodeSelectorTerms: 
            - matchFields: 
              - key: metadata.name
                operator: In 
                values: 
                - k8sapp01-docker
            - matchFields: 
              - key: metadata.name
                operator: In 
                values: 
                - k8sapp02
              
      containers: 
      - image: nginx:latest
        name: nginx-cont
        resources: 
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
# Node selector object
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nodeselector-deployment
  namespace: default
  labels: 
    ns: web
spec: 
  replicas: 5
  selector: 
    matchLabels: 
      web: backend
  template: 
    metadata: 
      labels: 
        web: backend
    spec: 
      nodeSelector:  # node selector object
        web: backend 
      containers: 
      - image: 
        name: 
        resources:: 
          requests: 
            cpu: 
            memory: 
          limits: 
            cpu: 
            memory: 
            
---
# Node-Affinity => required
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: node-affinity-preferred
  namespace: default
  labels: 
    na: web
spec: 
  replicas: 4
  selector: 
    matchLabels: 
      web: frontend
  template: 
    metadata: 
      labels: 
        web: frontend
    spec: 
      affinity: 
        nodeAffinity: 
          requiredDuringSchedulingIgnoredDuringExecution: 
            nodeSelectorTerms: 
            - matchExpressions: 
              - key: web
                operator: In 
                values: db
              - key: web
                operator: Exists 
                
---
# Node Affinity - preferred
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: node-affinity-preferred
  namespace: default
  labels: 
    na: web
spec: 
  replicas: 4
  selector: 
    matchLabels: 
      web: frontend
  template: 
    metadata: 
      labels: 
        web: frontend
    spec: 
      affinity: 
        nodeAffinity: 
          preferredDuringSchedulingIgnoredDuringExecution: 
          - weight: 80 
            preference: 
              matchExpressions: 
              - key: db 
                operator: In 
                values: mysql
          - weight: 60
            preference: 
              matchExpressions: 
              - key: db
                operator: Exists          
      containers: 
      - image: 
        name: 
        command: ["/bin/bash"]
        args: 
        - -c 
        - | 
          echo "test"
          sleep 4500
          
          
---
# Node Affinity - matchFields
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: node-affinity-preferred
  namespace: default
  labels: 
    na: web
spec: 
  replicas: 4
  selector: 
    matchLabels: 
      web: frontend
  template: 
    metadata: 
      labels: 
        web: frontend
    spec: 
      affinity: 
        nodeAffinity: 
          requiredDuringSchedulingIgnoredDuringExecution: 
            nodeSelectorTerms: 
            - matchFields: 
              key: metadata.name
              operator: In 
              values: k8sapp01-docker
            - matchFields: 
              key: metadata.name
              operator: NotIn
              values: k8sapp02
      containers:
      - image: 
        name: 
        command: ["/bin/sh"]
        args: 
        - -c 
        - | 
          echo 
          sleep 50
        resources: 
          requests: 
            cpu: 
            memory: 
          limits: 
            cpu: 
            memory: 
            
---
# Init containers
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: init-container-dp
  namespace: default
  labels: 
    web: frontend
spec: 
  replicas: 5
  selector: 
    matchLabels: 
      web: db
  template: 
    metadata: 
      labels: 
        web: db
    spec: 
      containers: 
      - image: nginx
        name: nginx-cont
        command: ['sh', '-c', 'echo The app is running && sleep 3600']
 
---
# k8s Service 
apiVersion: apps/v1
kind: Service
metadata: 
  name: service-test
spec: 
  ports: 
  - port: 80 # service Port, where service will run 
    targetPort: 8080 # pod container port, where the container will run 
    
---
# Endpoints
apiVersion: v1 
kind: Endpoints
metadata: 
  name: test-endpoint
subsets: 
- addresses: 
  - ip: 10.21.2.137
  ports: 
  - port: 80 
  
  
---
# Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: httpd-deploy
  labels: 
    web: frontend
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      web: backend
  template: 
    metadata: 
      labels: 
        web: backend
    spec: 
      containers: 
      - image: httpd
        name: httpd-cont
       
---
# service (clusterIp)
apiVersion: v1 
kind: Service
metadata: 
  name: backend-service
spec: 
  selector: 
    web: backend # must match with deployment's selector
  ports: 
  - port: 80 # httpd Port
    targetPort: 8080 # httpd-container run port in the pod
    
---
# Service (NodePort)
apiVersion: v1 
kind: Service
metadata: 
  name: nodeport-service
spec: 
  type: NodePort
  selector: 
    web: backend # must match with deployment's selector
  ports: 
  - port: 8080 # kubernetes service run port. it will be mentioned with the service ip
    targetPort: 80 # Container run port. in container httpd is running. httpd runs in 80 port
    nodePort: 30021 # NodePort service running port. not mandatory. 
---
# Ingress test 
## apache Deployment
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: apache-dpl
  namespace: ingress-test
  labels: 
    app: web1
spec: 
  replicas: 2 
  selector: 
    matchLabels: 
      app: web-apache 
  template: 
    metadata: 
      labels: 
        app: web-apache
    spec: 
      containers: 
      - image: httpd:latest
        name: apache-cont
        resources: 
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---

## apache Deployment svc
apiVersion: v1 
kind: Service
metadata: 
  name: ingress-apache
  namespace: ingress-test
spec: 
  selector: 
    app: web-apache
  ports: 
  - port: 8080 # K8s Service will run 
    targetPort: 80 # underline containers will run 

---
## Nginx Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-dpl 
  namespace: ingress-test
  labels: 
    app: web2 
spec: 
  replicas: 2 
  selector: 
    matchLabels: 
      app: web-nginx 
  template: 
    metadata: 
      labels: 
        app: web-nginx
    spec: 
      containers: 
      - image: nginx:latest
        name: nginx-cont
        resources: 
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---

## Nginx Deployment svc
apiVersion: v1 
kind: Service
metadata: 
  name: ingress-nginx
  namespace: ingress-test
spec: 
  selector: 
    app: web-nginx
  ports:
  - port: 9154
    targetPort: 80 
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: pilot-ingress
  namespace: ingress-test
spec: 
  ingressClassName: nginx
  rules: 
  - host: shop.portal.com
    http: 
      paths: 
      - path: / 
        pathType: Prefix
        backend: 
          service: 
            name: ingress-apache
            port: 
              number: 9090
  - host: support.portal.com
    http: 
      paths: 
      - path: /
        pathType: Prefix
        backend: 
          service: 
            name: ingress-nginx
            port: 
              number: 9154

---
# ingress 2
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-name
  namespace: namespace-name
spec: 
  ingressClassName: nginx
  rules: 
  - host: application.site
    http: 
      paths: 
      - path: / 
        pathType: Prefix
        backend: 
          service: 
            name: created-service-name
            port: 
              number: 9154
---

# HPA 
## Deployment
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-hpa
  labels: 
    app: web
spec: 
  replicas: 2 
  selector: 
    matchLabels: 
      app: web
  template: 
    metadata: 
      labels: 
        app: web
    spec: 
      containers: 
      - image: nginx
        name: nginx-cont
        resources: 
          requests: 
            cpu: "100m"
          limits: 
            cpu: "200m"
            
---
# service
apiVersion: v1 
kind: Service
metadata: 
  name: nginx-hpa-svc
spec: 
  selector: 
    app: web
  ports: 
  - port: 9090 # service run port
    targetPort: 80 # internal container run port 
---
# for metrics related autoscaling, update metrics.type 
metrics:
  - type: Pods
    pods:
      metric:
        name: requests_per_second
      target:
        type: AverageValue
        averageValue: 100
---
# Queue length increase 
metrics:
  - type: External
    external:
      metric:
        name: queue_length
      target:
        type: AverageValue
        averageValue: 30

---
kubectl run -i --tty load-generator --image=busybox --restart=Never -- /bin/sh
while true; do wget -q -O- http://nginx-hpa-svc.default.svc.cluster.local:9090; done

---
# Vertical Pod Scaling - VPA
# Deployment 
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-deployment
  namespace: default
  labels: 
    app: frontend
spec: 
  replicas: 2 
  selector: 
    matchLabels: 
      app: frontend
  template: 
    metadata: 
      labels: 
        app: frontend
    spec: 
      containers: 
      - image: nginx 
        name: nginx-cont
---
# Service VPA
apiVersion: v1 
kind: Service
metadata: 
  name: nginx-vpa-svc
spec: 
  selector: 
    app: frontend
  type: NodePort
  ports: 
  - port: 8888
    targetPort: 80
---
# kubernetes Volume
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: hostpath-dp
  labels: 
    app: db 
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: db 
  template: 
    metadata: 
      labels: 
        app: db
    spec: 
      containers: 
      - image: busybox
        name: busybox-cont
        command: ["/bin/sh"]
        args: 
        - -c 
        - | 
          mkdir -p /mnt/data
          echo "Hello world" > /mnt/data/hello.txt
          sleep 3600
        volumeMounts: 
        - name: mnt-data # should be matched with volumes.name
          mountPath: /mnt/data # data path of pod/container need to be mounted
      volumes: 
      - name: mnt-data # should be matched with volumeMounts.name 
        hostPath: 
          path: /opt/hostdata # where data path will be mounted in linux server
          type: DirectoryOrCreate # create directory if not available there

---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: temp-volume-pod
  labels: 
    app: log-collector
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: log-collector
  template: 
    metadata: 
      labels: 
        app: log-collector
    spec: 
      containers: 
      - image: busybox
        name: busybox-cont
        command: ["/bin/sh"]
        args: 
        - -c
        - |
          mkdir -p /mnt/data
          echo "Hello world" > /mnt/data/hello.txt
          sleep 3600
        volumeMounts: 
        - name: log-printer-path
          mountPath: /mnt/data
      - image: busybox
        name: log-collector-cont 
        command: ["/bin/sh"]
        args: 
        - -c
        - | 
          cat /mnt/data/hello.txt > /tmp/output.txt
          echo "Log collector worked" >> /tmp/output.txt
          sleep 3600
        volumeMounts: 
        - name: log-collector-path
          mountPath: /tmp
      volumes: 
      - name: log-printer-path
        emptyDir: {}
      - name: log-collector-path
        hostPath: 
          path: /opt/hostdata
          type: DirectoryOrCreate

---
