kubernetes/manifest-files/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: test-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: shop.portal.com
    http:
      paths:
      - backend:
          service:
            name: service-test
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: support.portal.com
    http:
      paths:
      - backend:
          service:
            name: service-test
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
